# Plenum

./: .gitignore  LICENSE  README.md  alternative_plenum_aeff.ipynb  flux_spectral_features_generic.ipynb  icecube_public_effective_areas.ipynb  load_effective_areas.ipynb  plenum_effective_areas.ipynb  plenum_improvements_in_galactic_coords.ipynb  plenum_template_toy_analysis.ipynb  plenum_time_evolution.ipynb  settings.py  setup.cfg  style.mplstyle  tools.py  toy_diffuse_analysis.ipynb
.ipynb_checkpoints/: plenum_effective_areas-checkpoint.ipynb  plenum_expected_event_numbers-checkpoint.ipynb
core/: aeff_calculations.py  astro_flux.py  atmospheric_background.py  atmospheric_background_H3a.py  event_numbers.py  fluxes.py  likelihood.py  old_aeff_calculations.py  prepare_histograms.py  resolution.py  settings.py  tools.py
notebooks/: KRAgamma_Model_Analysis.ipynb  Untitled.ipynb  alternative_plenum_aeff.ipynb  background_flux.ipynb  basic_diffuse_spatial_analysis.ipynb  basic_diffuse_spectral_analysis.ipynb  basic_pointlike_spectral_analysis.ipynb  cool_diffuse_template_analysis.ipynb  demo_plenum_aeff.ipynb  energy_resolution.ipynb  firesong_tutorial.ipynb  flux_spectral_features_generic.ipynb  flux_to_events_PS_demo.ipynb  flux_to_events_demo.ipynb  flux_to_events_diffuse_demo copy.ipynb  flux_to_events_diffuse_demo.ipynb  galactic_center_analysis.ipynb  galactic_plane_analysis.ipynb  load_effective_areas.ipynb  muon_input.ipynb  optimization_input.ipynb  plenum_FoV_calculation.ipynb  plenum_skymap_illustrations-updated.ipynb  plenum_skymap_illustrations.ipynb  (+11 more)
(+208 files in other folders)
