[metadata]
name = plenum
version = 0.0.1
author = Matthias Huber, Lisa Schumacher
author_email = lj.schumacher@tum.de
description = Phyics performance of distributed network of neutrino telescopes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mhuber89/Plenum
project_urls =
    Bug Tracker = https://github.com/mhuber89/Plenum/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = core
packages = find:
python_requires = >=3.6
install_requires=
    numpy
    scipy
    pandas
    astropy
    seaborn
    jupyterlab
    mceq
    tqdm
    mephistogram @ git+https://github.com/lisajschumacher/mephistogram.git


[options.packages.find]
where = core

